#1740 - Crides asíncrones a PINBAL

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -20,6 +20,7 @@ decorator.menu.administracio.tasques.execucio=Tasques en execució
 decorator.menu.administracio.reindexacions=Reindexacions asíncrones
 decorator.menu.administracio.monitor.integracio=Monitor integracions
 decorator.menu.administracio.monitor.domini=Monitor dominis
+decorator.menu.administracio.pinbal=Consultes PINBAL
 decorator.menu.administracio.cercador.tipologies=Cercador de tipus d'expedients
 decorator.logo.govern=Govern de les Illes Balears
 decorator.logo.manera=Una manera de hacer Europa
@@ -3215,3 +3216,17 @@ excepcio.detall.titol=Detall de l'excepció
 excepcio.list.titol=Darreres excepcions produïdes
 excepcio.detall.camp.param1=Paràmetre 1
 excepcio.detall.camp.param2=Paràmetre 2
+
+consultes.pinbal.titol=Consultes enviades a PINBAL
+consultes.pinbal.camp.tipus=Expedient tipus
+consultes.pinbal.camp.exp=Número expedient
+consultes.pinbal.camp.procediment=Procediment
+consultes.pinbal.camp.usuari=Usuari petició
+consultes.pinbal.camp.dataPeticio=Data petició
+consultes.pinbal.camp.estat=Estat
+consultes.pinbal.camp.exp=Número expedient
+
+enum.pinbal.estat.TRAMITADA=Tramitada
+enum.pinbal.estat.ERROR=Error
+enum.pinbal.estat.PENDENT=Pendent
+enum.pinbal.estat.ERROR_PROCESSANT=Error processant
