#1740 - Crides asíncrones a PINBAL

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -662,6 +662,7 @@ expedient.info.accio.migrararxiu=Migrar a arxiu
 expedient.info.pipella.tasques=Tasques
 expedient.info.pipella.tokens=Tokens
 expedient.info.pipella.accions=Accions
+expedient.info.pipella.pinbal=Peticions PINBAL
 expedient.info.pipella.dades=Dades
 expedient.info.pipella.documents=Documents
 expedient.info.pipella.interessats=Interessats
@@ -3224,6 +3225,9 @@ consultes.pinbal.camp.procediment=Procediment
 consultes.pinbal.camp.usuari=Usuari petició
 consultes.pinbal.camp.dataPeticio=Data petició
 consultes.pinbal.camp.estat=Estat
+consultes.pinbal.camp.dataPrevista=Data prevista
+consultes.pinbal.camp.error=Missatge del error
+consultes.pinbal.camp.asincrona=Asíncrona
 consultes.pinbal.camp.exp=Número expedient
 
 enum.pinbal.estat.TRAMITADA=Tramitada
