#1740 - Crides asíncrones a PINBAL -crides assíncrones i tractament petició i resposta

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -72,7 +72,7 @@ error.permis.codi.repetit=Ja existeix un altre rol amb aquest codi
 error.info.expedient.imatgeproces=No hi ha imatge per a aquesta definició de procés
 error.descarregar.fitxer=Error al descarregar el fitxer amb token
 error.validacio.token=Error de validació retrocedint token
-
+error.camp.boolea.valid=El valor ha de ser true o false
 error.validator=Error intern de validació
 
 error.data.anterior=La data no pot ser anterior al dia d'avui
