#1740 - Crides asíncrones a PINBAL

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3230,6 +3230,10 @@ consultes.pinbal.camp.error=Missatge del error
 consultes.pinbal.camp.asincrona=Asíncrona
 consultes.pinbal.camp.exp=Número expedient
 
+consultes.pinbal.boto.just=Descarregar justificant
+consultes.pinbal.boto.update=Actualitzar estat
+consultes.pinbal.boto.info=Veurer detall
+
 enum.pinbal.estat.TRAMITADA=Tramitada
 enum.pinbal.estat.ERROR=Error
 enum.pinbal.estat.PENDENT=Pendent
