Crear dos llistats de consultes de peticions al Portasignatures i al Notib - nou menú Consultar

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -15,6 +15,10 @@ decorator.menu.consultes=Consultes
 decorator.menu.consultes.generic=Consulta general
 decorator.menu.disseny.tipus.expedient=Tipus d'expedient
 decorator.menu.organitzacio=Organització
+decorator.menu.consultar=Consultar
+decorator.menu.consultar.consultes.pinbal=Consultes enviades PINBAL
+decorator.menu.consultar.notificacions=Notificacions enviades
+decorator.menu.consultar.documents.enviats.portafib=Documents enviats a Portafib
 decorator.menu.administracio=Administració
 decorator.menu.administracio.tasques.execucio=Tasques en execució
 decorator.menu.administracio.reindexacions=Reindexacions asíncrones
