#1740 - Crides asíncrones a PINBAL

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3219,9 +3219,10 @@ excepcio.detall.camp.param1=Paràmetre 1
 excepcio.detall.camp.param2=Paràmetre 2
 
 consultes.pinbal.titol=Consultes enviades a PINBAL
+consultes.pinbal.camp.entorn=Entorn
 consultes.pinbal.camp.tipus=Expedient tipus
 consultes.pinbal.camp.exp=Número expedient
-consultes.pinbal.camp.procediment=Procediment
+consultes.pinbal.camp.procediment=Servei SCSP
 consultes.pinbal.camp.usuari=Usuari petició
 consultes.pinbal.camp.dataPeticio=Data petició
 consultes.pinbal.camp.estat=Estat
@@ -3229,10 +3230,14 @@ consultes.pinbal.camp.dataPrevista=Data prevista
 consultes.pinbal.camp.error=Missatge del error
 consultes.pinbal.camp.asincrona=Asíncrona
 consultes.pinbal.camp.exp=Número expedient
+consultes.pinbal.camp.document=Document
+consultes.pinbal.camp.pinbal=Identificador PINBAL
+consultes.pinbal.camp.dataProcessamentDarrer=Darrera consulta
 
 consultes.pinbal.boto.just=Descarregar justificant
 consultes.pinbal.boto.update=Actualitzar estat
 consultes.pinbal.boto.info=Veurer detall
+consultes.pinbal.detall.titol=Detall de consulta a PINBAL
 
 enum.pinbal.estat.TRAMITADA=Tramitada
 enum.pinbal.estat.ERROR=Error
