#1716 Crear dos llistats de consultes de peticions al Portasignatures i al Notib

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3228,6 +3228,8 @@ excepcio.list.titol=Darreres excepcions produïdes
 excepcio.detall.camp.param1=Paràmetre 1
 excepcio.detall.camp.param2=Paràmetre 2
 
+consultes.potafib.titol=Documents enviats a Portafib
+
 consultes.pinbal.titol=Consultes enviades a PINBAL
 consultes.pinbal.camp.entorn=Entorn
 consultes.pinbal.camp.tipus=Expedient tipus
@@ -3253,3 +3255,12 @@ enum.pinbal.estat.TRAMITADA=Tramitada
 enum.pinbal.estat.ERROR=Error
 enum.pinbal.estat.PENDENT=Pendent
 enum.pinbal.estat.ERROR_PROCESSANT=Error processant
+
+enum.portafirmes.estat.BLOQUEJAT=Bloquejat
+enum.portafirmes.estat.PENDENT=Pendent
+enum.portafirmes.estat.SIGNAT=Signat
+enum.portafirmes.estat.REBUTJAT=Rebutjat
+enum.portafirmes.estat.PROCESSAT=Processat
+enum.portafirmes.estat.CANCELAT=Cancel·lat
+enum.portafirmes.estat.ERROR=Error
+enum.portafirmes.estat.ESBORRAT=Esborrat
