#1716 Crear dos llistats de consultes de peticions al Portasignatures i al Notib

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3229,6 +3229,16 @@ excepcio.detall.camp.param1=Paràmetre 1
 excepcio.detall.camp.param2=Paràmetre 2
 
 consultes.potafib.titol=Documents enviats a Portafib
+consultes.potafib.camp.dataEnviat=Data d'enviament
+consultes.potafib.camp.nomDoc=Document
+consultes.potafib.detall.titol=Detall de l'enviament a Portafib
+consultes.potafib.camp.motiuRebuig=Motiu del rebuig
+consultes.potafib.camp.dataRebuig=Data del rebuig
+consultes.potafib.camp.dataFirmat=Data de firma
+consultes.potafib.camp.filtreDesde=Data enviament desde
+consultes.potafib.camp.filtreFins=Data enviament fins
+consultes.potafib.camp.dataProcessamentPrimer=Data primer processament
+consultes.potafib.camp.dataProcessamentDarrer=Data darrer processament
 
 consultes.pinbal.titol=Consultes enviades a PINBAL
 consultes.pinbal.camp.entorn=Entorn
