#1716 Crear dos llistats de consultes de peticions al Portasignatures i al Notib -Llistat de notificacions Notib

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -17,7 +17,7 @@ decorator.menu.disseny.tipus.expedient=Tipus d'expedient
 decorator.menu.organitzacio=Organització
 decorator.menu.consultar=Consultar
 decorator.menu.consultar.consultes.pinbal=Consultes enviades PINBAL
-decorator.menu.consultar.notificacions=Notificacions enviades
+decorator.menu.consultar.notificacions=Notificacions enviades a Notib
 decorator.menu.consultar.documents.enviats.portafib=Documents enviats a Portafib
 decorator.menu.administracio=Administració
 decorator.menu.administracio.tasques.execucio=Tasques en execució
@@ -3274,3 +3274,23 @@ enum.portafirmes.estat.PROCESSAT=Processat
 enum.portafirmes.estat.CANCELAT=Cancel·lat
 enum.portafirmes.estat.ERROR=Error
 enum.portafirmes.estat.ESBORRAT=Esborrat
+
+notificacio.llistat.titol=Notificacions enviades a NOTIB
+notificacio.llistat.filtre.camp.tipusEnviament=Tipus enviament
+notificacio.llistat.filtre.camp.concepte=Concepte
+notificacio.llistat.filtre.camp.estat=Estat
+notificacio.llistat.filtre.camp.dataInicial=Data inicial
+notificacio.llistat.filtre.camp.dataFinal=Data final
+notificacio.llistat.filtre.camp.interessat=Interessat
+notificacio.llistat.filtre.camp.expedient=Expedient
+notificacio.llistat.filtre.camp.document.nom=Nom document
+notificacio.llistat.filtre.camp.unitat.organitzativa=Unitat organitzativa
+notificacio.llistat.filtre.camp.organ.emissor=Òrgan emissor
+notificacio.llistat.filtre.camp.expedientTipus=Expedient tipus
+
+notificacio.llistat.columna.data.enviament=Data enviament
+notificacio.llistat.columna.concepte=Concepte
+notificacio.llistat.columna.tipus.enviament=Tipus enviament
+notificacio.llistat.columna.estat=Estat
+notificacio.llistat.columna.destinatari=Destinatari
+notificacio.llistat.columna.organ.emissor=Òrgan emissor
