#1716 Crear dos llistats de consultes de peticions al Portasignatures i al Notib

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3294,3 +3294,5 @@ notificacio.llistat.columna.tipus.enviament=Tipus enviament
 notificacio.llistat.columna.estat=Estat
 notificacio.llistat.columna.destinatari=Destinatari
 notificacio.llistat.columna.organ.emissor=Òrgan emissor
+
+notificacio.detall.titol=Detall de l'enviament a Notib
