--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1488,6 +1488,7 @@ expedient.tipus.document.llistat.columna.nom=Nom
 expedient.tipus.document.llistat.columna.plantilla=És plantilla?
 expedient.tipus.document.llistat.columna.notificable=Notificable
 expedient.tipus.document.llistat.columna.arxiu=Arxiu
+expedient.tipus.document.llistat.columna.flux=Tipus flux firma
 expedient.tipus.document.llistat.accio.nova=Nou document
 expedient.tipus.document.llistat.accio.esborrar.error=S'ha produït un error al intentar esborrar el document del tipus d'expedient
 expedient.tipus.document.llistat.accio.descarregar=Descarregar
