#1716 Crear dos llistats de consultes de peticions al Portasignatures i al Notib -correccions i modificacions al llistat de notib

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1488,6 +1488,7 @@ expedient.tipus.document.llistat.columna.nom=Nom
 expedient.tipus.document.llistat.columna.plantilla=És plantilla?
 expedient.tipus.document.llistat.columna.notificable=Notificable
 expedient.tipus.document.llistat.columna.arxiu=Arxiu
+expedient.tipus.document.llistat.columna.flux=Tipus flux firma
 expedient.tipus.document.llistat.accio.nova=Nou document
 expedient.tipus.document.llistat.accio.esborrar.error=S'ha produït un error al intentar esborrar el document del tipus d'expedient
 expedient.tipus.document.llistat.accio.descarregar=Descarregar
@@ -3296,3 +3297,20 @@ notificacio.llistat.columna.destinatari=Destinatari
 notificacio.llistat.columna.organ.emissor=Òrgan emissor
 
 notificacio.detall.titol=Detall de l'enviament a Notib
+notificacio.detall.camp.entorn=Entorn
+notificacio.detall.camp.expedient.tipus=Expedient tipus
+notificacio.detall.camp.expedient=Expedient
+notificacio.detall.camp.data.enviament=Data enviament
+notificacio.detall.camp.data.programada=Data programada
+notificacio.detall.camp.retard=Retard
+notificacio.detall.camp.data.caducitat=Data caducitat
+notificacio.detall.camp.codi.usuari=Codi usuari enviament
+notificacio.detall.camp.organ.emissor=Òrgan emissor
+notificacio.detall.camp.interessat=Interessat
+notificacio.detall.camp.destinatari=Destinatari
+notificacio.detall.camp.document.enviat=Document enviat
+notificacio.detall.camp.annexos=Annexos
+notificacio.detall.camp.justificant=Justificant
+notificacio.detalls.camp.intents=Núm intents
+notificacio.detalls.camp.data.ultim.intent=Data últim intent
+notificacio.detalls.camp.data.proxim.intent=Data pròxim intent
