#1716 Crear dos llistats de consultes de peticions al Portasignatures i al Notib

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3280,8 +3280,8 @@ notificacio.llistat.titol=Notificacions enviades a NOTIB
 notificacio.llistat.filtre.camp.tipusEnviament=Tipus enviament
 notificacio.llistat.filtre.camp.concepte=Concepte
 notificacio.llistat.filtre.camp.estat=Estat
-notificacio.llistat.filtre.camp.dataInicial=Data inicial
-notificacio.llistat.filtre.camp.dataFinal=Data final
+notificacio.llistat.filtre.camp.dataInicial=Data enviament desde
+notificacio.llistat.filtre.camp.dataFinal=Data enviament fins
 notificacio.llistat.filtre.camp.interessat=Interessat
 notificacio.llistat.filtre.camp.expedient=Expedient
 notificacio.llistat.filtre.camp.document.nom=Nom document
