#1763 Nova acció massiva per anul·lar expedients

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3312,3 +3312,8 @@ notificacio.detall.camp.justificant=Justificant
 notificacio.detalls.camp.intents=Núm intents
 notificacio.detalls.camp.data.ultim.intent=Data últim intent
 notificacio.detalls.camp.data.proxim.intent=Data pròxim intent
+
+expedient.eines.anular_expedients=Anul·lar expedients
+expedient.eines.anular_expedients.motiu=Motiu de l'anul·lació *
+expedient.eines.anular_expedients.motiu.err=El motiu de l'anul·lació és obligatori
+expedient.eines.anular_expedients.ok=S&#39;ha programat l&#39;acció d&#39;anul·lar {0} expedient(s)
