#1762 Modal per seleccionar i firmar els documents en estat esborrany a l'hora de tancar un expedient

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -767,6 +767,7 @@ expedient.metadades.nti.dades.error.arreglar.success=La informació NTI de l'expe
 expedient.metadades.nti.dades.error.arreglar.error=Ha ocorregut un error arreglant la informació NTI: {0}
 
 expedient.error.finalitzant.expedient=Error finalitzant l'expedient
+expedient.error.prefinalitzant.expedient=Error al carregar la pantalla per finalitzar expedient
 
 document.metadades.nti.titol.nti=Metadades NTI
 document.metadades.nti.titol.arxiu=Metadades NTI i informació de l'arxiu
@@ -3317,3 +3318,11 @@ expedient.eines.anular_expedients=Anul·lar expedients
 expedient.eines.anular_expedients.motiu=Motiu de l'anul·lació *
 expedient.eines.anular_expedients.motiu.err=El motiu de l'anul·lació és obligatori
 expedient.eines.anular_expedients.ok=S&#39;ha programat l&#39;acció d&#39;anul·lar {0} expedient(s)
+
+finalitzar.expedient.titol=Finalitzar l''expedient: {0}
+finalitzar.expedient.info=Aquest expedient conté esborranys que serán eliminats al tancar-lo. A cotinuació pot marcar els esborranys per a que siguin firmats amb firma de servidor abans de tancar l'expedient i així no serán eliminats. Si els documents contenen alguna firma invàlida, aquesta será eliminada i es tornarà a firmar el document en servidor.
+finalitzar.expedient.info2=Aquest expedient no conté cap esborrany, es pot finalitzar sense necessitat de cap acció addicional.
+finalitzar.expedient.info3=Aquest expedient no té la integració amb arxiu activada, es pot finalitzar sense necessitat de cap acció addicional.
+finalitzar.expedient.confirm=Estau segur que voleu finalitzar aquest expedient?
+finalitzar.expedient.accio1=Firmar
+finalitzar.expedient.accio2=Firmar i finalitzar
