#1762 Modal per seleccionar i firmar els documents en estat esborrany a l'hora de tancar un expedient

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3324,5 +3324,7 @@ finalitzar.expedient.info=Aquest expedient conté esborranys que serán eliminats 
 finalitzar.expedient.info2=Aquest expedient no conté cap esborrany, es pot finalitzar sense necessitat de cap acció addicional.
 finalitzar.expedient.info3=Aquest expedient no té la integració amb arxiu activada, es pot finalitzar sense necessitat de cap acció addicional.
 finalitzar.expedient.confirm=Estau segur que voleu finalitzar aquest expedient?
-finalitzar.expedient.accio1=Firmar
-finalitzar.expedient.accio2=Firmar i finalitzar
+finalitzar.expedient.accio1=Firmar seleccionats
+finalitzar.expedient.accio2=Firmar seleccionats i finalitzar
+finalitzar.expedient.accio3=Finalitzar
+expedient.finalitzat.ok=L'expedient s'ha finalitzat correctament.
