#1762 Modal per seleccionar i firmar els documents en estat esborrany a l'hora de tancar un expedient

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3328,3 +3328,5 @@ finalitzar.expedient.accio1=Firmar seleccionats
 finalitzar.expedient.accio2=Firmar seleccionats i finalitzar
 finalitzar.expedient.accio3=Finalitzar
 expedient.finalitzat.ok=L'expedient s'ha finalitzat correctament.
+expedient.finalitzat.ok2=Els documents seleccionats s'han firmat i pujat correctament a l'Arxiu.
+expedient.error.prefinalitzant.anotacio=Els fitxers corresponents a una anotació, d'han de seleccionar obligatòriament per incloure's a l'Arxiu.
