--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2403,8 +2403,14 @@ anotacio.llistat.reintentar.consulta=Reintentar consulta
 anotacio.llistat.reintentar.consulta.title=Posa els intents a 0 de les anotacions que estiguin comunicades i no s'hagin pogut consultar durant els intents establerts.
 anotacio.llistat.reintentar.processament=Reintentar processament
 anotacio.llistat.reintentar.processament.title=Torna a processar les anotacions amb error de processament. Les anotacions pendents o rebutjades es tornen a avaluar si hi ha cap tipus d'expedient que es pugui associar i en cas de tenir processament automàtic es duu a terme.
-anotacio.llistat.reintentar.mapeig=Reintentar mapeig
-anotacio.llistat.reintentar.mapeig.title=En el cas que l'anotació estigui associada a un expedient i en el tipus d'expedient estigui configurat el mapeig amb Sistra2 es torna a processar el mapeig de variables i documents.
+anotacio.llistat.reintentar.mapeig=Reintentar mapeig ...
+anotacio.llistat.reintentar.mapeig.titol=Reintentar mapeig de {0} anotacions.
+anotacio.llistat.reintentar.mapeig.nosel=No s'ha seleccionat cap anotació del llistat.
+anotacio.llistat.reintentar.mapeig.vars=Reintentar mapeig de variables
+anotacio.llistat.reintentar.mapeig.docs=Reintentar mapeig de documents
+anotacio.llistat.reintentar.mapeig.adjn=Reintentar mapeig d'adjunts
+anotacio.llistat.error.no.accio=S'ha de seleccionar al menys una acció.
+anotacio.llistat.reintentar.mapeig.title=En el cas que l'anotació estigui associada a un expedient i en el tipus d'expedient estigui configurat el mapeig amb Sistra2 es torna a processar el mapeig de variables, documents i adjunts.
 anotacio.llistat.reintentar.processament.nomes.annexos=Reintentar traspàs annexos
 anotacio.llistat.reintentar.processament.nomes.annexos.title=Torna a intentar el traspàs a l'Arxiu dels annexos de l'anotació que hagin pogut quedar a l'expedient d'origen de l'anotació de Distribucio cap a la carpeta de l'expedient de l'Arxiu d'Helium.
 anotacio.llistat.esborrar.anotacions=Esborrar anotacions
