--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -232,7 +232,7 @@ expedient.registre.entitat=Entitat
 expedient.registre.missatge=Descripció
 expedient.registre.valorVell=Valor antic
 expedient.registre.valorNou=Valor nou
-expedient.registre.correcte=El retrocés es va realitzar correctament
+expedient.registre.correcte=El retrocés s'ha realitzat correctament
 expedient.tasques=Registre de tasques
 expedient.log=Registre d'accions
 expedient.log.accio=Acció
