#1780 Exportació ENI d'expedients

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -668,6 +668,12 @@ expedient.info.accio.script=Executar script
 expedient.info.accio.executar=Executar
 expedient.info.accio.reindexa=Reindexar l'expedient
 expedient.info.accio.buidarlog=Eliminar informació registre
+expedient.info.accio.exportarIndex=Generar índex PDF
+expedient.info.accio.exportarIndex.title=Genera un PDF amb una taula resum dels fitxers de l'expedient.
+expedient.info.accio.eni=Exporta documents amb ENI
+expedient.info.accio.eni.title=Genera un ZIP amb els documents definitius de l'expedient i la informació ENI (format XML) per cada document i de l'expedient mateix, a més de l'index en PDF de l'expedient.
+expedient.info.accio.eniExp=Exportar ENI expedient
+expedient.info.accio.eniExp.title=Genera el fitxer ENI (format XML) de l'expedient.
 expedient.info.accio.migrararxiu=Migrar a arxiu
 expedient.info.pipella.tasques=Tasques
 expedient.info.pipella.tokens=Tokens
@@ -3336,3 +3342,15 @@ finalitzar.expedient.accio3=Finalitzar
 expedient.finalitzat.ok=L'expedient s'ha finalitzat correctament.
 expedient.finalitzat.ok2=Els documents seleccionats s'han firmat i pujat correctament a l'Arxiu.
 expedient.error.prefinalitzant.anotacio=Els fitxers corresponents a una anotació, d'han de seleccionar obligatòriament per incloure's a l'Arxiu.
+
+expedient.exportacio.index.num=Num.
+expedient.exportacio.index.tipus=Tipus
+expedient.exportacio.index.nom=Nom fitxer
+expedient.exportacio.index.data=Data creació
+expedient.exportacio.index.tipusDoc=Tipus documental
+expedient.exportacio.index.origen=Origen
+expedient.exportacio.index.estat=Estat
+expedient.exportacio.index.firmat=Amb firma
+expedient.exportacio.eniExp.noActiu=L'expedient no té integració amb arxiu.
+expedient.exportacio.index.link=Enllaç CSV
+expedient.exportacio.eni.error=No s''ha pogut generar el fitxer: {0}
