#1782 Sincronització amb l'Arxiu

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3354,3 +3354,7 @@ expedient.exportacio.index.firmat=Amb firma
 expedient.exportacio.eniExp.noActiu=L'expedient no té integració amb arxiu.
 expedient.exportacio.index.link=Enllaç CSV
 expedient.exportacio.eni.error=No s''ha pogut generar el fitxer: {0}
+
+expedient.boto.sincro.arxiu=Sincronitzar amb Arxiu
+expedient.boto.sincro.arxiu.ok=S'ha sincronitzat l'expedient, interessats i documents amb l'arxiu.
+expedient.boto.sincro.arxiu.ko=La sincronització de l'expedient amb l'arxiu no s'ha pogut realitzar: {0}
