#1784 Errada en el nom, quan es fa una notificació

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3358,3 +3358,4 @@ expedient.exportacio.eni.error=No s''ha pogut generar el fitxer: {0}
 expedient.boto.sincro.arxiu=Sincronitzar amb Arxiu
 expedient.boto.sincro.arxiu.ok=S'ha sincronitzat l'expedient, interessats i documents amb l'arxiu.
 expedient.boto.sincro.arxiu.ko=La sincronització de l'expedient amb l'arxiu no s'ha pogut realitzar: {0}
+expedient.notifica.dades.retallar=Les dades dels següents interessats es retallaran en el moment de notificar per superar les mides màximes permeses per NOTIB:
