--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -175,15 +175,32 @@ interessat.form.titol.modificar=Modificar interessat
 
 interessat.form.camp.codi=Codi
 interessat.form.camp.codipostal=Codi postal
-interessat.form.camp.nom=Nom / Raó social
+interessat.form.camp.nom=Nom
+interessat.form.camp.rao.social=Raó social
 interessat.form.camp.nif=NIF/CIF/DNI
 interessat.form.camp.dir3codi=Codi DIR3
-interessat.form.camp.llinatge1=Llinatge1
-interessat.form.camp.llinatge2=Llinatge2
+interessat.form.camp.llinatge1=Primer llinatge
+interessat.form.camp.llinatge2=Segon llinatge
 interessat.form.camp.tipus=Tipus
 interessat.form.camp.email=Email
 interessat.form.camp.telefon=Telefon
 interessat.form.camp.tipus=Tipus d'interessat
+interessat.form.camp.document.identificatiu=Document identificatiu
+interessat.form.camp.boto.cercar=Cercar
+interessat.form.camp.boto.nova=Nova
+interessat.form.camp.suggest.persona.fisica=Persona física
+interessat.form.camp.suggest.cercar.persona.fisica=Cercar persones físiques
+interessat.form.camp.suggest.persona.juridica=Persona jurídica
+interessat.form.camp.suggest.cercar.persona.juridica=Cercar persones jurídiques per CIF
+interessat.form.camp.suggest.administracio.organ=Òrgan
+interessat.form.camp.suggest.cercar.administracio.organ=Cercar òrgan gestor
+interessat.form.camp.tipus.document=Tipus document
+interessat.form.camp.direccio=Direcció
+interessat.form.camp.pais=Pais
+interessat.form.camp.provincia=Provincia
+interessat.form.camp.localitat=Localitat
+interessat.form.camp.observacions=Observacions
+interessat.form.camp.raosocial=Rao Social
 
 interessat.form.camp.entregatipus=Tipus entrega postal
 interessat.form.camp.linia1=Línia 1
@@ -194,13 +211,20 @@ interessat.form.camp.entregadehobligat=Obligat
 
 interessat.form.valid.email=Aquest camp és obligatori si està habilitada l'entrega a la Direcció Electrònica Hablitada (DEH)
 interessat.form.valid.linia=Aquest camp és obligatori si està habilitada l'entrega postal
-interessat.tipus.enum.ADMINISTRACIO=Administració
-interessat.tipus.enum.FISICA=Fisica
-interessat.tipus.enum.JURIDICA=Juridica
+interessat.form.tipus.enum.ADMINISTRACIO=Administració
+interessat.form.tipus.enum.FISICA=Persona física
+interessat.form.tipus.enum.JURIDICA=Persona jurídica
 
 interessat.tipus.enum.ADMINISTRACIO=Administració
-interessat.tipus.enum.FISICA=Fisica
-interessat.tipus.enum.JURIDICA=Juridica
+interessat.tipus.enum.FISICA=Física
+interessat.tipus.enum.JURIDICA=Jurídica
+
+interessat.tipus.document.enum.NIF=NIF
+interessat.tipus.document.enum.CIF=CIF
+interessat.tipus.document.enum.PASSAPORT=Passaport
+interessat.tipus.document.enum.DOCUMENT_IDENTIFICATIU_ESTRANGERS=Document identificatiu estrangers
+interessat.tipus.document.enum.ALTRES_DE_PERSONA_FISICA=Altres de persona física
+interessat.tipus.document.enum.CODI_ORIGEN=Codi origen
 
 domiciliconcret.tipus.enum.NACIONAL=Nacional
 domiciliconcret.tipus.enum.ESTRANGER=Estranger
