#1710 Adaptar el manteniment d'interessats als camps SICRES
- Guardar correctament enums docIdent (N,C,..)
- Creació de representants associats a interessats

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -151,6 +151,9 @@ unitat.synchronize.prediction.rules.filtre=Per unitat organitzativa en el filtre
 unitat.synchronize.prediction.rules.desti=Per unitat organitzativa en l'acció de reenviar a una UO destí
 
 interessat.llistat.accio.nou=Nou interessat
+interessat.llistat.accio.nou.representant=Nou representant
+interessat.llistat.accio.modificar.representant=Modificar representant
+interessat.llistat.accio.esborrar.representant=Esborrar representant
 interessat.llistat.titol=Interessat
 interessat.llistat.columna.codi=Codi
 interessat.llistat.columna.nom=Nom
@@ -162,12 +165,18 @@ interessat.llistat.columna.tipus=Tipus
 interessat.llistat.columna.email=Email
 interessat.llistat.columna.telefon=Telefon
 interessat.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest interessat?
+interessat.llistat.confirmacio.esborrar.representant=Estau segur que voleu esborrar aquest representant?
 
 
 interessat.controller.creat=L'interessat s'ha creat correctament
 interessat.controller.modificat=L'interessat s'ha modificat correctament
 interessat.controller.esborrat=L'interessat s'ha esborrat correctament
 interessat.controller.esborrar.error=Error esborrant l''interessat: {0}
+
+interessat.controller.representant.creat=El representat de l''interessat s'ha creat correctament
+interessat.controller.representant.modificat=El representat de l''interessat s'ha modificat correctament
+interessat.controller.representant.esborrat=El representat de l''interessat s'ha esborrat correctament
+interessat.controller.representant.error=Error esborrant el representant de l''interessat: {0}
 
 interessat.llistat.titol=Interessat
 interessat.form.titol.nou=Crear interessat
