#1741 Afegir documents a partir de consultes predefinides a Pinbal
- Taula i manteniment de Serveis Pinbal

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -8,6 +8,7 @@ decorator.menu.avisos=Avisos
 decorator.menu.unitats.organitzatives=Unitats organitzatives
 decorator.menu.procediments=Procediments
 decorator.menu.excepcions=Excepcions
+decorator.menu.serveisPinbal=Serveis PINBAL
 decorator.menu.tasques=Tasques
 decorator.menu.fluxes=Fluxos de firma
 decorator.menu.informes=Informes
@@ -3023,8 +3024,6 @@ nti.document.tipo.documental.ESCRIT=Escrit
 nti.document.tipo.documental.INICIATIVA__LEGISLATIVA=Iniciativa legislativa
 nti.document.tipo.documental.PETICIO=Petició
 
-
-
 nti.document.format.GML=GML
 nti.document.format.WFS=WFS
 nti.document.format.WMS=WMS
@@ -3057,7 +3056,6 @@ nti.document.format.XLS=XLS
 nti.document.format.MDB=MDB
 nti.document.format.ALTRES=ALTRES
 
-
 nti.tipo.firma.CSV=CSV
 nti.tipo.firma.XADES_DET=XAdES detached
 nti.tipo.firma.XADES_ENV=XAdES enveloped
@@ -3072,6 +3070,18 @@ seu.idioma.CA=Català
 seu.idioma.ES=Espanyol
 
 variable.helper.error.recuperant.valor=Error convertint el valor a variable tipus {0} {1}
+
+serveisPinbal.col.codi=Codi
+serveisPinbal.col.nom=Descripció
+serveisPinbal.col.pinbalServeiDocPermesDni=DNI permés
+serveisPinbal.col.pinbalServeiDocPermesNif=NIF permés
+serveisPinbal.col.pinbalServeiDocPermesCif=CIF permés
+serveisPinbal.col.pinbalServeiDocPermesNie=NIE permés
+serveisPinbal.col.pinbalServeiDocPermesPas=Passaport permés
+serveisPinbal.boto.modificar=Modificar...
+serveisPinbal.form.modificar=Modificar servei PINBAL
+serveisPinbal.form.modificar.ok=El servei pinbal <b>{0}</b> s&#39;ha modificat correctament.
+serveisPinbal.form.modificar.ko=Error al modificar el servei pinbal <b>{0}</b>: {1}
 
 reindexacions.titol=Reindexacions pendents i errors
 reindexacions.titol.helium=Reindexacions asíncrones pendents i amb errors d'Helium
