--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -161,7 +161,7 @@ interessat.llistat.columna.llinatge1=Llinatge1
 interessat.llistat.columna.llinatge2=Llinatge2
 interessat.llistat.columna.tipus=Tipus
 interessat.llistat.columna.email=Email
-interessat.llistat.columna.telefon=Telefon
+interessat.llistat.columna.telefon=Telèfon
 interessat.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest interessat?
 
 
@@ -183,7 +183,7 @@ interessat.form.camp.llinatge1=Llinatge1
 interessat.form.camp.llinatge2=Llinatge2
 interessat.form.camp.tipus=Tipus
 interessat.form.camp.email=Email
-interessat.form.camp.telefon=Telefon
+interessat.form.camp.telefon=Telèfon
 interessat.form.camp.tipus=Tipus d'interessat
 
 interessat.form.camp.entregatipus=Tipus entrega postal
@@ -2358,6 +2358,7 @@ repro.texte.guardar=Guardar Repro
 repro.texte.repros=Repros
 
 expedient.boto.nou_document=Nou document
+expedient.boto.nou_documentPinbal=Consulta PINBAL...
 expedient.boto.nova_dada=Nova dada
 expedient.boto.veure_errors=Veure errors
 expedient.boto.veure_alertes=Veure alertes
@@ -2373,6 +2374,7 @@ expedient.nova.data.codi=Codi
 expedient.nova.data.valor=Valor
 
 expedient.nou.document.existent=Documents definits en el procés
+expedient.titol.nou_documentPinbal=Afegir nou document PINBAL
 
 monitor.domini.titol=Monitor de consultes a domini
 monitor.domini.opcio.dominis.interns=Dominis interns
@@ -3082,6 +3084,29 @@ serveisPinbal.boto.modificar=Modificar...
 serveisPinbal.form.modificar=Modificar servei PINBAL
 serveisPinbal.form.modificar.ok=El servei pinbal <b>{0}</b> s&#39;ha modificat correctament.
 serveisPinbal.form.modificar.ko=Error al modificar el servei pinbal <b>{0}</b>: {1}
+serveisPinbal.document.legend.title=PINBAL
+serveisPinbal.document.form.pinbalActiu=PINBAL Actiu
+serveisPinbal.document.form.pinbalActiu.info=Indica si el document podrá ser aportat automáticament mitjançant una petició a PINBAL. 
+serveisPinbal.document.form.pinbalServei=Servei PINBAL
+serveisPinbal.document.form.pinbalFinalitat=Finalitat
+serveisPinbal.document.form.pinbalCifOrgan=Utilitzar el CIF del òrgan
+serveisPinbal.enum.SVDDGPCIWS02=Consulta de dades d'identitat
+serveisPinbal.enum.SVDDGPVIWS02=Verificació de dades d'identitat
+serveisPinbal.enum.SVDCCAACPASWS01=Estar al corrent d'obligacions tributàries per a la sol·licitut de subvencions i ajudes de la CCAA
+serveisPinbal.enum.SVDSCDDWS01=Servei de consulta de dades de discapacitat
+serveisPinbal.enum.SCDCPAJU=Servei de consulta de padró de convivència
+serveisPinbal.enum.SVDSCTFNWS01=Servei de consulta de família nombrosa
+serveisPinbal.enum.SVDCCAACPCWS01=Estar al corrent d'obligacions tributàries per a la contractació amb la CCAA
+serveisPinbal.enum.Q2827003ATGSS001=Estar al corrent de pagament amb la Seguretat Social
+serveisPinbal.enum.SVDDELSEXWS01=Consulta d'inexistència de delictes sexuals per dades de filiació
+serveisPinbal.enum.SCDHPAJU=Servei de consulta de padró històric
+serveisPinbal.enum.NIVRENTI=Consulta del nivell de renta
+serveisPinbal.enum.ECOT103=Estar al corrent d'obligacions tributàries per a la sol·licitud de subvencions i ajudes amb indicació d'incompliments
+serveisPinbal.enum.SVDDGPRESIDENCIALEGALDOCWS01=Servei de consulta de dades de residència legal d'estrangers per documentació
+serveisPinbal.enum.SVDRRCCNACIMIENTOWS01=Servei de consulta de naixement
+serveisPinbal.enum.SVDRRCCMATRIMONIOWS01=Servei de consulta de matrimoni
+serveisPinbal.enum.SVDRRCCDEFUNCIONWS01=Servei de consulta de defunció
+serveisPinbal.enum.SVDBECAWS01=Servei de consulta de condició de becat
 
 reindexacions.titol=Reindexacions pendents i errors
 reindexacions.titol.helium=Reindexacions asíncrones pendents i amb errors d'Helium
@@ -3277,11 +3302,66 @@ consultes.pinbal.camp.exp=Número expedient
 consultes.pinbal.camp.document=Document
 consultes.pinbal.camp.pinbal=Identificador PINBAL
 consultes.pinbal.camp.dataProcessamentDarrer=Darrera consulta
+consultes.pinbal.camp.consentiment=Consentiment
 
 consultes.pinbal.boto.just=Descarregar justificant
 consultes.pinbal.boto.update=Actualitzar estat
 consultes.pinbal.boto.info=Veurer detall
+consultes.pinbal.boto.consultar=Consultar
 consultes.pinbal.detall.titol=Detall de consulta a PINBAL
+consultes.pinbal.resultat.ok=El document {0}, que conté el justificant de la petició PINBAL {1} s'ha creat correctament. 
+consultes.pinbal.resultat.ko.interessat=El tipus de document de l'interessat seleccionat, no és dels tipus permesos al servei PINBAL indicat.
+
+contingut.pinbal.form.camp.consentiment.tipus.discapacitat=Consentiment tipus discapacitat
+contingut.pinbal.form.camp.finalitat=Finalitat
+contingut.pinbal.form.camp.data.consulta=Data consulta
+contingut.pinbal.form.camp.data.naixement=Data naixement
+contingut.pinbal.form.camp.data.nombre.anys.historic=Nombre d'anys de l&#39;històric
+contingut.pinbal.form.camp.data.exercici=Exercici
+contingut.pinbal.form.camp.data.expedicion=Data expedició
+contingut.pinbal.form.camp.data.caducidad=Data caducitat
+contingut.pinbal.form.camp.codi.nacionalitat=Codi Nacionalitat
+contingut.pinbal.form.camp.pais.nacionalitat=Pais de nacionalitat
+contingut.pinbal.form.camp.codi.nacionalitat.comment=Ha de ser un codi numèric de 3 dígits. Podreu trobar els codis dels països a l&#39;enllaç https://ca.wikipedia.org/wiki/ISO_3166-1
+contingut.pinbal.form.camp.codi.poblacio.naixament=Codi població de naixement
+contingut.pinbal.form.camp.municipi.naixament=Municipi de naixement
+contingut.pinbal.form.camp.codi.poblacio.naixament.comment=Camp obligatori per a ciutadans nascuts a Espanya.
+contingut.pinbal.form.camp.pais.naixament=Pais de naixement
+contingut.pinbal.form.camp.poblacio.naixament=Població de naixement
+contingut.pinbal.form.camp.poblacio.naixament.comment=Camp obligatori per a ciutadans nascuts a l&#39;estranger.
+contingut.pinbal.form.camp.sexe=Sexe
+contingut.pinbal.form.camp.nom.pare=Nom del pare
+contingut.pinbal.form.camp.nom.pare.comment=Camp obligatori per a ciutadans amb nacionalitat espanyola.
+contingut.pinbal.form.camp.nom.mare=Nom del mare
+contingut.pinbal.form.camp.nom.mare.comment=Camp obligatori per a ciutadans amb nacionalitat espanyola, si no s'inclou el nom del pare.
+contingut.pinbal.form.camp.tipus.passaport=Tipus passaport
+contingut.pinbal.form.camp.tipus.passaport.comment=Si s'introdueix el tipus de passaport és necessari indicar data de caducitat i pais de nacionalitat
+contingut.pinbal.form.camp.tipus.numero.soporte.passaport.comment=El camp nombre suport, o el tipus passaport han d'estar informats
+contingut.pinbal.form.camp.registreCivil=Registre civil
+contingut.pinbal.form.camp.tom=Tom
+contingut.pinbal.form.camp.pagina=Pàgina
+contingut.pinbal.form.camp.data=Data
+contingut.pinbal.form.camp.pais=Pais
+contingut.pinbal.form.camp.municipi=Municipi
+contingut.pinbal.form.camp.ausenciaSegundoApellido=Absència segon cognom
+contingut.pinbal.form.camp.curs=Curs
+contingut.pinbal.form.camp.curs.comment=El primer curs disponible a les consultes és el 2014
+contingut.pinbal.form.datos.especificos=Dades específiques
+contingut.pinbal.form.camp.comunitat.autonoma=Comunitat autònoma
+contingut.pinbal.form.camp.provincia=Província
+contingut.pinbal.form.camp.provincia.naixament=Província de naixement
+contingut.pinbal.form.camp.provincia.naixament.comment=Camp obligatori per a ciutadans nascuts a Espanya.
+contingut.pinbal.form.camp.numero.titol=Número de títol
+contingut.pinbal.form.camp.numero.soporte=Nombre suport
+contingut.pinbal.form.camp.any.naixament=Any de naixament
+contingut.pinbal.form.camp.titular.llinatge1=Primer llinatge
+contingut.pinbal.form.legend.dadesRegistrals=Dades registrals
+contingut.pinbal.form.legend.fetRegistral=Fet registral
+contingut.pinbal.form.legend.naixement=Naixement
+contingut.pinbal.form.legend.dadesAdicionals=Dades adicionals
+
+consentiment.enum.SI=Si
+consentiment.enum.LLEI=Llei
 
 enum.pinbal.estat.TRAMITADA=Tramitada
 enum.pinbal.estat.ERROR=Error
