#1741 Afegir documents a partir de consultes predefinides a Pinbal
- Implementar funcionalitat boto consulta (PluginHelper). Per el métode
de PINBAL SVDI. (1 de 17)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3309,8 +3309,9 @@ consultes.pinbal.boto.update=Actualitzar estat
 consultes.pinbal.boto.info=Veurer detall
 consultes.pinbal.boto.consultar=Consultar
 consultes.pinbal.detall.titol=Detall de consulta a PINBAL
-consultes.pinbal.resultat.ok=El document {0}, que conté el justificant de la petició PINBAL {1} s'ha creat correctament. 
-consultes.pinbal.resultat.ko.interessat=El tipus de document de l'interessat seleccionat, no és dels tipus permesos al servei PINBAL indicat.
+consultes.pinbal.resultat.ok=El document {0}, que conté el justificant de la petició PINBAL {1} s&#39;ha creat correctament.
+consultes.pinbal.resultat.ko=El document {0}, no s&#39;ha pogut crea a partir de la petició PINBAL {1}: {2}
+consultes.pinbal.resultat.ko.interessat=El tipus de document de l&#39;interessat seleccionat, no és dels tipus permesos al servei PINBAL indicat.
 
 contingut.pinbal.form.camp.consentiment.tipus.discapacitat=Consentiment tipus discapacitat
 contingut.pinbal.form.camp.finalitat=Finalitat
