#1710_Adaptar_el_manteniment_d'interessats_als_camps_SICRES_FASE2

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -195,6 +195,7 @@ interessat.form.camp.codi=Codi
 interessat.form.camp.codipostal=Codi postal
 interessat.form.camp.nom=Nom
 interessat.form.camp.rao.social=Raó social
+interessat.form.camp.nom.rao.social=Nom / Raó social
 interessat.form.camp.nif=NIF/CIF/DNI
 interessat.form.camp.dir3codi=Codi DIR3
 interessat.form.camp.codi.dire=Codi DIRe
