#1741 Afegir documents a partir de consultes predefinides a Pinbal
- Provades totes les peticions a PINBAL proves.caib.es

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3297,6 +3297,7 @@ typeMismatch.float=El format no és correcte (els decimals s'han d'especificar am
 typeMismatch.int=El format no és correcte (ha de ser un nombre sencer)
 typeMismatch.java.util.Date=El format no és correcte (ha de ser dd/mm/aaaa)
 NotEmpty=És obligatori especificar algun valor
+NotEmptys=És obligatori especificar un dels valors
 NotNull=És obligatori especificar algun valor
 error.requiredField=És obligatori especificar algun valor
 Size=La longitud ha d''estar entre {2} i {1}
@@ -3355,7 +3356,7 @@ consultes.pinbal.boto.info=Veurer detall
 consultes.pinbal.boto.consultar=Consultar
 consultes.pinbal.detall.titol=Detall de consulta a PINBAL
 consultes.pinbal.resultat.ok=El document {0}, que conté el justificant de la petició PINBAL {1} s&#39;ha creat correctament.
-consultes.pinbal.resultat.ko=El document {0}, no s&#39;ha pogut crea a partir de la petició PINBAL {1}: {2}
+consultes.pinbal.resultat.ko=El document {0}, no s&#39;ha pogut crear a partir de la petició PINBAL {1}: {2}
 consultes.pinbal.resultat.ko.interessat=El tipus de document de l&#39;interessat seleccionat, no és dels tipus permesos al servei PINBAL indicat.
 
 contingut.pinbal.form.camp.consentiment.tipus.discapacitat=Consentiment tipus discapacitat
@@ -3380,12 +3381,15 @@ contingut.pinbal.form.camp.nom.pare=Nom del pare
 contingut.pinbal.form.camp.nom.pare.comment=Camp obligatori per a ciutadans amb nacionalitat espanyola.
 contingut.pinbal.form.camp.nom.mare=Nom del mare
 contingut.pinbal.form.camp.nom.mare.comment=Camp obligatori per a ciutadans amb nacionalitat espanyola, si no s'inclou el nom del pare.
+contingut.pinbal.form.delsex.camp.any=No es permeten consultes d'anys anteriors a 1920.
 contingut.pinbal.form.camp.tipus.passaport=Tipus passaport
 contingut.pinbal.form.camp.tipus.passaport.comment=Si s'introdueix el tipus de passaport és necessari indicar data de caducitat i pais de nacionalitat
 contingut.pinbal.form.camp.tipus.numero.soporte.passaport.comment=El camp nombre suport, o el tipus passaport han d'estar informats
 contingut.pinbal.form.camp.registreCivil=Registre civil
 contingut.pinbal.form.camp.tom=Tom
 contingut.pinbal.form.camp.pagina=Pàgina
+contingut.pinbal.form.camp.telefonMail.comment=El telèfon o el mail s'han d'indicar.
+contingut.pinbal.form.camp.dadesRegistrals=S'han d'emplenar les dades registrals o les dades adicionals.
 contingut.pinbal.form.camp.data=Data
 contingut.pinbal.form.camp.pais=Pais
 contingut.pinbal.form.camp.municipi=Municipi
@@ -3490,6 +3494,9 @@ expedient.exportacio.index.firmat=Amb firma
 expedient.exportacio.eniExp.noActiu=L'expedient no té integració amb arxiu.
 expedient.exportacio.index.link=Enllaç CSV
 expedient.exportacio.eni.error=No s''ha pogut generar el fitxer: {0}
+
+enum.sexe.SEXE_HOME=Home
+enum.sexe.SEXE_DONA=Dona
 
 expedient.boto.sincro.arxiu=Sincronitzar amb Arxiu
 expedient.boto.sincro.arxiu.ok=S'ha sincronitzat l'expedient, interessats i documents amb l'arxiu.
