#1741 Afegir documents a partir de consultes predefinides a Pinbal
- Canvis i millores menors.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3121,6 +3121,7 @@ variable.helper.error.recuperant.valor=Error convertint el valor a variable tipu
 
 serveisPinbal.col.codi=Codi
 serveisPinbal.col.nom=Descripció
+serveisPinbal.col.docsRestr=Documents restringits
 serveisPinbal.col.pinbalServeiDocPermesDni=DNI permés
 serveisPinbal.col.pinbalServeiDocPermesNif=NIF permés
 serveisPinbal.col.pinbalServeiDocPermesCif=CIF permés
