#1710 Adaptar el manteniment d'interessats als camps SICRES -Modificacions en tractament de representants -Enviament de notificacions

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -153,6 +153,7 @@ unitat.synchronize.prediction.rules.desti=Per unitat organitzativa en l'acció de
 
 interessat.llistat.accio.nou=Nou interessat
 interessat.llistat.accio.nou.representant=Nou representant
+interessat.llistat.accio.cercar.representant=Cercar representant
 interessat.llistat.accio.modificar.representant=Modificar representant
 interessat.llistat.accio.esborrar.representant=Esborrar representant
 interessat.llistat.titol=Interessat
@@ -177,7 +178,7 @@ interessat.controller.esborrar.error=Error esborrant l''interessat: {0}
 interessat.controller.representant.creat=El representat de l''interessat s'ha creat correctament
 interessat.controller.representant.modificat=El representat de l''interessat s'ha modificat correctament
 interessat.controller.representant.esborrat=El representat de l''interessat s'ha esborrat correctament
-interessat.controller.representant.error=Error esborrant el representant de l''interessat: {0}
+interessat.controller.representant.error=Error esborrant el representant: {0}
 
 interessat.controller.paisos.error=Error obtenint la llista de països
 interessat.controller.comunitats.error=Error obtenint la llista de comunitats autònomes
