#1710 Adaptar el manteniment d'interessats als camps SICRES Fase 4 - desplegables info interessats i representants - cercador de representants

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -174,24 +174,24 @@ interessat.controller.creat=L'interessat s'ha creat correctament
 interessat.controller.modificat=L'interessat s'ha modificat correctament
 interessat.controller.esborrat=L'interessat s'ha esborrat correctament
 interessat.controller.esborrar.error=Error esborrant l''interessat: {0}
-
+interessat.controller.representant.confirmacio.seleccionar=Esteu segur que voleu associar aquest representant a l'interessat?
 interessat.controller.representant.creat=El representat de l''interessat s'ha creat correctament
 interessat.controller.representant.modificat=El representat de l''interessat s'ha modificat correctament
 interessat.controller.representant.esborrat=El representat de l''interessat s'ha esborrat correctament
 interessat.controller.representant.error=Error esborrant el representant: {0}
-
+interessat.controller.representant.assignat=El representat s'ha assignat correctament a l''interessat
 interessat.controller.paisos.error=Error obtenint la llista de països
 interessat.controller.comunitats.error=Error obtenint la llista de comunitats autònomes
 interessat.controller.provincies.error=Error obtenint la llista de provincies
 interessat.controller.municipis.error=Error obtenint la llista de municipis
-
+interessat.controller.buit=Aquest expedient no té representants
 interessat.llistat.titol=Interessat
 interessat.form.titol.nou=Crear interessat
 interessat.form.titol.modificar=Modificar interessat
 interessat.llistat.titol.representant=Representant
 interessat.form.titol.nou.representant=Crear representant
 interessat.form.titol.modificar.representant=Modificar representant
-
+interessat.form.titol.cercar.representant=Cercar representant
 interessat.form.camp.codi=Codi
 interessat.form.camp.codipostal=Codi postal
 interessat.form.camp.nom=Nom
@@ -207,6 +207,7 @@ interessat.form.camp.email=Email
 interessat.form.camp.telefon=Telèfon
 interessat.form.camp.tipus=Tipus d'interessat
 interessat.form.camp.document.identificatiu=Document identificatiu
+interessat.form.camp.document=Document
 interessat.form.camp.boto.cercar=Cercar
 interessat.form.camp.boto.nova=Nova
 interessat.form.camp.suggest.persona.fisica=Persona física
@@ -249,6 +250,10 @@ interessat.tipus.document.enum.PASSAPORT=Passaport
 interessat.tipus.document.enum.DOCUMENT_IDENTIFICATIU_ESTRANGERS=Document identificatiu estrangers
 interessat.tipus.document.enum.ALTRES_DE_PERSONA_FISICA=Altres de persona física
 interessat.tipus.document.enum.CODI_ORIGEN=Codi origen
+
+interessat.tipus.enum.canalnotif.01=Direcció Postal
+interessat.tipus.enum.canalnotif.02=Direcció electrònica habilitada
+interessat.tipus.enum.canalnotif.03=Compareixença electrònica
 
 domiciliconcret.tipus.enum.NACIONAL=Nacional
 domiciliconcret.tipus.enum.ESTRANGER=Estranger
@@ -2862,7 +2867,7 @@ comu.boto.acceptar=Acceptar
 comu.boto.rebutjar=Rebutjar
 comu.boto.reintentar=Reintentar
 comu.darrera.actualitzacio=Darrera actualització
-
+comu.boto.seleccionar=Seleccionar
 comu.true=Sí
 comu.false=No
 
